2005-07-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.h :
	* lib/list.c :

	  - Added a traverse list function that will go through each node of a
	    given list and call a given function.

	* lib/network.c :

	  - Sacrificed readability for efficiency! The network dump functions
	    now use the traverse list function.

	* test/mem_test.sh :

	  - Removed BASH extensions like arrays, $[], etc.

	  - Also show free'd pointers that were unmalloc'd.

2005-07-27  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/mem.h :
	* lib/mem.c :

	  - When enabled (through --enable-debug), the wrapper functions
	    for malloc, realloc and free will dump the memory address
	    involved in the operation. A very crude way of detecting
	    memory leaks.

	* lib/tribe.h :

	  - Removed old TBE_PTR_ macros in favour of the new TBE_MEM_ in
	    mem.h.

	* test/mem_test.sh :

	  - Added a simple script that checks for memory leaks based on the
	    output of the memory debug mechanism.

	* lib/list.h :
	* lib/list.c :

	  - Now uses new memory macros.

	  - Encapsulated the list internals into list.c. In the header file,
	    the list type definition is just void *.

	  - Interal structures renamed with a __tbe prefix.

	  - Added tbe_list_create() and tbe_list_destroy() to manually
	    allocate and deallocate a list.

	  - Added a generic tbe_list_free function to be used by lists with
	    standard nodes.

	* lib/network.h :
	* lib/network.c :

	  - tbe_net_rqueue removed (see iqueue entry below).

	  - Modified to use the new list interface, now has tbe_net_create()
	    and tbe_net_destroy().

	  - As with tbe_list, net structures are hidden in the .c file.

	  - Fixed some memory leaks found by our crude memory debugger.

	* lib/iqueue.h :
	* lib/iqueue.c :

	  - What was once rqueue in network.c is moved to iqueue.h/.c.

	* test/test.c :

	  - Modified to use new network.h interface.

	* lib/Makefile.in :

	  - Compile mem.h and mem.c
